--- a/OnlineShop.API/appsettings.json
+++ b/OnlineShop.API/appsettings.json
@@ -6,6 +6,9 @@
     }
   },
   "AllowedHosts": "*",
+  "JwtConfig": {
+    "Secret": "YOUR_SECRET_KEY_SHOULD_BE_LONG_AND_SECURE"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=your_server;Database=your_database;User=your_user;Password=your_password;Trusted_Connection=True;TrustServerCertificate=True;"
   }
