--- a/OnlineShop.BLL/OnlineShop.BLL.csproj
+++ b/OnlineShop.BLL/OnlineShop.BLL.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.9.2" />
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.8" />
   </ItemGroup>
 
   <ItemGroup>
