--- a/OnlineShop.BLL/OnlineShop.BLL.csproj
+++ b/OnlineShop.BLL/OnlineShop.BLL.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="FluentValidation" Version="11.9.2" />
   </ItemGroup>
 
