--- a/OnlineShop.API/appsettings.json
+++ b/OnlineShop.API/appsettings.json
@@ -2,8 +2,16 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "File": {
+    "LogLevel": {
+      "Default": "Information"
+    },
+    "Path": "Logs/app.log",
+    "RollingInterval": "Day"
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
